public class AnimationTriggerNames
{
    public const string Jump = "Jump";
    public const string Attack = "Attack";
    public const string Throw = "Throw";
    public const string Spin = "Spin";
    public const string Hurt = "Hurt";
}

public class AnimationFloatNames
{
    public const string Speed = "Speed";
    public const string Velocity = "Velocity";
    public const string ClimbingSpeed = "ClimbingSpeed";
}

public class AnimationIntNames
{
    public const string AttackType = "AttackType";
}

public class AnimationBoolNames
{
    public const string IsRunning = "IsRunning";
    public const string IsGrounded = "IsGrounded";
    public const string IsDead = "IsDead";
    public const string IsClimbing = "IsClimbing";
    public const string IsPushing = "IsPushing";
    public const string IsRageActive = "IsRageActive";
}
